<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="total">Input your total amount here</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip20">20%</string>
    <string name="tips">Tips:</string>
    <string name="custom">Or input custom percentage</string>
    <string name="tipPercent">Percentage to Tip:</string>
    <string name="numOfPp">Number of people:</string>
    <string name="perPeople">Tips Per Person:</string>

</resources>
